--- a/src/pages/homepage/homepage.component.scss
+++ b/src/pages/homepage/homepage.component.scss
@@ -122,8 +122,9 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    overflow-x: auto;
+    overflow-x: scroll;
     scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
     gap: 2rem;
     width: 100%;
     height: 56vh;
@@ -132,11 +133,17 @@
 
     &::-webkit-scrollbar {
       height: 0.5rem;
+      display: block !important;
     }
 
     &::-webkit-scrollbar-thumb {
       background-color: rgba(255, 255, 255, 0.3);
-      border-radius: 0.25rem;
+      border-radius: 0.5rem;
+    }
+
+    &::-webkit-scrollbar-track {
+      display: block !important;
+      background: rgba(255, 255, 255, 0.1);
     }
   }
 
@@ -251,20 +258,23 @@
 
 /* Project details view */
 .project-details {
-  position: absolute;
+  display: flex;
+  flex-direction: column;
   top: 15vh;
   left: 2rem;
   width: 55vw;
   height: 62vh;
   background-color: rgba(0, 0, 0, 0.9);
   padding: 2rem;
-  overflow-y: auto;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
   z-index: 10;
   color: white;
 
   &::-webkit-scrollbar {
     width: 0.5rem;
-    display: block;
+    display: block !important;
   }
 
   &::-webkit-scrollbar-thumb {
@@ -272,16 +282,23 @@
     border-radius: 0.5rem;
   }
 
+  &::-webkit-scrollbar-track {
+    display: block !important;
+    background: rgba(255, 255, 255, 0.1);
+  }
+
   .close-btn {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    background: transparent;
+    align-self: flex-end;
     border: none;
     color: white;
     font-size: 2rem;
     cursor: pointer;
     z-index: 11;
+    background: transparent;
+
+    &:hover {
+      background: darkred;
+    }
   }
 
   h2 {
@@ -319,7 +336,6 @@
     text-align: justify;
     font-family: 'Rubik', sans-serif;
     line-height: 1.6;
-    margin-top: 2.5rem;
   }
 
   .context-title-text,
@@ -333,7 +349,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 0.5rem;
-    margin-top: 2.5rem;
+    margin-top: 1.5rem;
 
     span {
       font-family: 'Rubik', sans-serif;
