--- a/src/pages/timeline/timeline.component.scss
+++ b/src/pages/timeline/timeline.component.scss
@@ -42,11 +42,26 @@
     display: flex;
     align-items: center;
     position: relative;
-    overflow-x: auto;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
     width: 70%;
     height: 100%;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
+
+    &::-webkit-scrollbar {
+      height: 0.5rem;
+      display: block !important;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: rgba(255, 255, 255, 0.3);
+      border-radius: 0.5rem;
+    }
+
+    &::-webkit-scrollbar-track {
+      display: block !important;
+      background: rgba(255, 255, 255, 0.1);
+    }
   }
 
   .timeline {
